complete progress bar

--- a/survey/survey.html
+++ b/survey/survey.html
@@ -15,9 +15,9 @@
   <header>
     <!--<progress id="status-bar" value="1" max="0">-->
     <!--</progress>-->
-    <div id = "my-bar">
-    <div id = "status-bar"></div>
-  </div>
+    <!-- <div id="my-bar"> -->
+    <div id="status-bar"></div>
+  <!-- </div> -->
     
   </header>
   <div class="result">
