result loading edit

--- a/result/result.html
+++ b/result/result.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-  <div class="loadingPage" style="display:none">
-    loading...
+  <div class="loadingBox" style="display:none">
+    0%
+    <div class="wave"></div>
   </div>
   <div class="bodyDiv">
     <section id="main">
