modify loading page

--- a/result/result.html
+++ b/result/result.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -14,10 +13,9 @@
   <link rel="stylesheet" href="result.css" />
   <title>LifeOn42</title>
 </head>
-
 <body>
   <div class="loadingBox" style="display:none">
-    0%
+    로딩중..
     <div class="wave"></div>
   </div>
   <div class="bodyDiv">
