edit share message

--- a/result/result.html
+++ b/result/result.html
@@ -57,7 +57,7 @@
           <br>
           - 웹: Microsoft Edge, Safari
           <br>
-          - 모바일: 모두 지원
+          - 모바일: 모두 지원(네이버 앱 미지원)
         </div>
     </section>
     <section id="developers">
