change HTML tag

--- a/survey/survey.html
+++ b/survey/survey.html
@@ -11,22 +11,22 @@
 </head>
 <body>
   <header>
-    <div id="status-bar"></div>    
+    <div id="status-bar"></div>
   </header>
-  <div class="result">
+  <main class="result">
     <div class="question"></div>
-    <div class="responses">
-      <div class="choose"></div>
-      <div class="choose"></div>
-      <div class="choose"></div>
-      <div class="choose"></div>
-    </div>
-  </div>
-  <div class="nav">
+    <ol class="responses">
+      <li class="choose"></li>
+      <li class="choose"></li>
+      <li class="choose"></li>
+      <li class="choose"></li>
+    </ol>
     <form>
       <button class="jsNext nextBtn" disabled="disabled">계속하기</button>
     </form>
-  </div>
+  </main>
+  <!-- <div class="nav"> -->
+  <!-- </div> -->
   <script src="data.js"></script>
   <script src="survey.js"></script>
 </body>
